[package]
name = "DeployBridge"
version = "0.2.0"
edition = "2024"


[profile.release]
lto="fat"
codegen-units=1
panic="abort"
strip=true


[dependencies]
axum = "0.8.9"
hex = "0.4.3"
serde = {version="1.0.228", features = ["derive"]}
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
